testing requirements and cairo

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -12,6 +12,9 @@ entries:
     - output: web,pdf
       title: Some Core Utilities
       url: core.html
+    - output: web,pdf
+      title: Some Cairo Basics
+      url: Cairo_Hello.html
     output: web
     title: days_of_code
   output: web
