--- a/settings.ini
+++ b/settings.ini
@@ -12,7 +12,7 @@ keywords = learning
 author = Jonathan Whitaker
 author_email = johnowhitaker@yahoo.com
 copyright = Jonathan Whitaker
-branch = {branch}
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
