Day 3: messing about visualising mice movement

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -15,6 +15,9 @@ entries:
     - output: web,pdf
       title: Some Cairo Basics
       url: Cairo_Hello.html
+    - output: web,pdf
+      title: Meeting Mice
+      url: Meeting_Mice.html
     output: web
     title: days_of_code
   output: web
