--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -24,6 +24,12 @@ entries:
     - output: web,pdf
       title: Playing with Perlin Noise
       url: Playing_with_Perlin.html
+    - output: web,pdf
+      title: Getting Interactive
+      url: Interaction_with_ipycanvas.html
+    - output: web,pdf
+      title: Title
+      url: Untitled.html
     output: web
     title: days_of_code
   output: web
