--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -28,8 +28,8 @@ entries:
       title: Getting Interactive
       url: Interaction_with_ipycanvas.html
     - output: web,pdf
-      title: Title
-      url: Untitled.html
+      title: Doing some Documentation
+      url: Doing_some_documentation.html
     output: web
     title: days_of_code
   output: web
