--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -30,6 +30,12 @@ entries:
     - output: web,pdf
       title: Doing some Documentation
       url: Doing_some_documentation.html
+    - output: web,pdf
+      title: Data Bubbles
+      url: Data_Bubbles.html
+    - output: web,pdf
+      title: 3D Modelling with Python
+      url: Going_3D.html
     output: web
     title: days_of_code
   output: web
