--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -36,6 +36,9 @@ entries:
     - output: web,pdf
       title: 3D Modelling with Python
       url: Going_3D.html
+    - output: web,pdf
+      title: Meeting Observable
+      url: Observable_HW.html
     output: web
     title: days_of_code
   output: web
