--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -39,6 +39,9 @@ entries:
     - output: web,pdf
       title: Meeting Observable
       url: Observable_HW.html
+    - output: web,pdf
+      title: Web Scraping ABC
+      url: Web_Scraping_ABC.html
     output: web
     title: days_of_code
   output: web
